crates/editor-codec-macros/tests/compile_fail/retired_on_closed.stderr
error: retired is only allowed on open enums
 --> tests/compile_fail/retired_on_closed.rs:6:10
  |
6 | pub enum E {
  |          ^
